tests/mm0_mmu/fail/bad-sort231.mm0
-- bad modifier order
strict provable pure sort s231;